  - add new gesture ULDR to access quick menu
  - add quick menu page buttons in case of touch screen
  - add quit button to quick menu
  - infoboxen: new setting, allow scaling of title/comment font
  - Radar / Thermalassistant Gauges: Placement to avoid InfoBoxen and Overlap
  - Add new Infobox “Home altitude difference” (Home AltD)
  - add helpers on infoboxes for Argentinean contests 95% distance rule
  - Popup messages now appear at the top of the map
  - FlarmTrafficWindow: align colors of FlarmTraffic with map for consistency
  - BigTrafficWidget: Save/Restore FLARM radar zoom on page change
  - BigTrafficWidget: zoom range to 5km when opening big radar via the FlarmGauge
* Android
  - fix crash on startup when loading icons on ldpi screens
  - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
  - make xcsoar accessible from lock screen
  - battery: use scale for charge percent calculation
  - battery: prevent shutdown on devices without battery
* Windows
  - Popupmessages are now shown with full text again
* devices
  - Add driver for Condor 3
  - Add driver for LX Navigation Eos / Era variometers
  - Flarm: parse flarm error messages (PFLAE) and display them
  - LXNAV: parse acceleration/g-load from PLXVF sentence
  - LXNAV: Overload formula, use reference mass instead of dry mass
  - OpenVario: Overload formula, use reference mass instead of dry mass
  - Vaulter: use fraction instead of overload for ballast
  - Devices: Switch to manual MC when set via external Device
* Polar:
  - LS8-15m: default polar, set to values according to flight manual

Version 7.43 - 2024-08-12
* calculations
  - CRITICAL: reachable map labels show correct altitude with head wind #1424
  - CRITICAL: fix reachability calculation with older compilers (OpenVario,..)
* airspace
  - add classes according the OpenAir extended format AY tag
  - coloring is done according to the AC tag, or if present and allowed, according to the AY tag
* data files